# c-action-test

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  IMPROVEMENTS.md  Makefile  README.md  STM32L476RGTx_FLASH.ld
.github/workflows/: build.yml  format.yml  static-analysis.yml  test.yml
inc/: main.h  utils.h
include/: stm32l4xx.h
src/: main.c  startup_stm32l476xx.s  utils.c
startup/: startup_stm32.c  stm32_linker.ld
tests/: Makefile  test_main.c
